updated bibtex file

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1453,7 +1453,6 @@
   pages     = {68001},
   doi       = {10.1209/0295-5075/110/68001},
   owner     = {Vincent},
-  review    = {arXiv: http://arxiv.org/abs/1504.02162},
   timestamp = {2015.04.14},
 }
 
@@ -1530,9 +1529,7 @@
   number    = {05},
   pages     = {7375-7382},
   doi       = {10.1609/aaai.v34i05.6232},
-  groups    = {Plot Generation (NLP)},
   owner     = {Vincent},
-  review    = {arXiv: https://arxiv.org/abs/1909.03480},
   timestamp = {2022.07.19},
 }
 
@@ -1930,7 +1927,6 @@
   number    = {11},
   pages     = {114102},
   doi       = {10.1103/PhysRevLett.96.114102},
-  groups    = {Synchronization - Consensus},
   owner     = {Vincent},
   timestamp = {2010.11.19},
 }
@@ -2433,16 +2429,15 @@
   url       = {https://aclanthology.info/papers/L10-1531/l10-1531},
 }
 
-@Article{Backstrom2011,
+@InProceedings{Backstrom2011,
   author    = {Backstrom, L. and Boldi, P. and Rosa, M. and Ugander, J. and Vigna, S.},
   title     = {Four Degrees of Separation},
-  journal   = {arXiv},
-  year      = {2011},
-  volume    = {cs.SI},
-  pages     = {1111.4570},
+  booktitle = {4th ACM Annual Web Science Conference},
+  year      = {2012},
+  pages     = {33-42},
+  doi       = {10.1145/2380718.2380723},
   owner     = {Vincent},
   timestamp = {2011.11.24},
-  url       = {http://arxiv.org/abs/1111.4570},
 }
 
 @Book{Baczko2008,
@@ -3170,7 +3165,6 @@
   title       = {Love is All You Need: Clauset's fruitless search for scale-free networks},
   institution = {Center for Complex Network Research},
   year        = {2018},
-  groups      = {Scale Free - Power Law},
   owner       = {Vincent},
   timestamp   = {2021.06.24},
   url         = {https://www.barabasilab.com/post/love-is-all-you-need},
@@ -3755,7 +3749,6 @@
   number    = {3},
   pages     = {192},
   doi       = {10.1007/s40314-020-01222-7},
-  groups    = {TV Series (Arts)},
   owner     = {Vincent},
   timestamp = {2018.11.11},
 }
@@ -4020,7 +4013,6 @@
   number    = {2},
   pages     = {1-9},
   doi       = {10.1109/tac.1959.1104847},
-  groups    = {Sequence Analysis},
   owner     = {Vincent},
   timestamp = {2022.03.25},
 }
@@ -4821,7 +4813,6 @@
   publisher = {Oxford University Press},
   year      = {1976},
   author    = {Biggs, N. L. and Lloyd, E. K. and Wilson, R. J.},
-  groups    = {Graph Theory},
   owner     = {Vincent},
   timestamp = {2021.04.09},
   url       = {https://global.oup.com/academic/product/graph-theory-1736-1936-9780198539162},
@@ -5516,7 +5507,6 @@
   publisher = {Princeton University Press},
   year      = {2012},
   author    = {Bonacich, P. and Lu, P.},
-  groups    = {_General Properties, Complex Networks in General, Complex Networks Intros},
   owner     = {Vincent},
   timestamp = {2020.07.20},
   url       = {https://press.princeton.edu/books/hardcover/9780691145495/introduction-to-mathematical-sociology},
@@ -6849,13 +6839,13 @@
 @Article{Broido2018,
   author    = {Broido, A. D. and Clauset, A.},
   title     = {Scale-free networks are rare},
-  journal   = {arXiv},
-  year      = {2018},
-  volume    = {physics.soc-ph},
-  pages     = {1801.03400},
+  journal   = {Nature Communications},
+  year      = {2019},
+  volume    = {10},
+  pages     = {1017},
+  doi       = {10.1038/s41467-019-08746-5},
   owner     = {Vincent},
   timestamp = {2018.04.18},
-  url       = {https://arxiv.org/abs/1801.03400},
 }
 
 @Article{Bron1973,
@@ -7732,10 +7722,6 @@
   pages         = {1616-1637},
   __markedentry = {[Vincent:]},
   doi           = {10.1109/TKDE.2018.2807452},
-  groups        = {_Reviews / Surveys (Embeddings)},
-  owner         = {Vincent},
-  review        = {old title: A Comprehensive Survey of Graph Embedding: Problems, Techniques and Applications
-arXiv: https://arxiv.org/abs/1709.07604},
   timestamp     = {2017.09.27},
 }
 
@@ -9391,9 +9377,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
   pages     = {1550023},
   month     = {nov},
   doi       = {10.1142/s021952591550023x},
-  groups    = {Dynamic Centrality},
   owner     = {Vincent},
-  publisher = {World Scientific Pub Co Pte Lt},
   timestamp = {2022.07.08},
 }
 
@@ -9942,7 +9926,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   number    = {2},
   pages     = {357-372},
   doi       = {10.1046/j.1365-246x.1999.00728.x},
-  groups    = {Power Law},
   owner     = {Vincent},
   timestamp = {2020.12.18},
 }
@@ -10696,13 +10679,13 @@ arXiv: https://arxiv.org/abs/1709.07604},
 @Article{Correa2019,
   author    = {Corrêa, E. A. and Marinho, V. Q. and Amancio, D. R.},
   title     = {Semantic flow in language networks},
-  journal   = {arXiv},
-  year      = {2019},
-  volume    = {cs.CL},
-  pages     = {1905.07595},
+  journal   = {Physica A},
+  year      = {2020},
+  volume    = {557},
+  pages     = {124895},
+  doi       = {10.1016/j.physa.2020.124895},
   owner     = {Vincent},
   timestamp = {2020.01.05},
-  url       = {https://arxiv.org/abs/1905.07595},
 }
 
 @Article{Correll2007,
@@ -15350,7 +15333,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   volume    = {54},
   pages     = {168-178},
   doi       = {10.1016/j.socnet.2018.02.002},
-  groups    = {Dynamic Centrality},
   owner     = {Vincent},
   timestamp = {2020.07.20},
 }
@@ -16106,7 +16088,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   title     = {Digital Network Analysis of Dramatic Texts},
   booktitle = {Digital Humanities Conference},
   year      = {2015},
-  groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2018.04.15},
   url       = {http://dh2015.org/abstracts/xml/FISCHER_Frank_Digital_Network_Analysis_of_Dramati/FISCHER_Frank_Digital_Network_Analysis_of_Dramatic_Text.html},
@@ -16151,7 +16132,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   howpublished = {\url{https://weltliteratur.net/curb-your-enthusiasm-season-9-network-analysis/}},
   organization = {{weltliteratur.net}},
   url          = {https://weltliteratur.net/curb-your-enthusiasm-season-9-network-analysis/},
-  groups       = {Character Nets},
   owner        = {Vincent},
   timestamp    = {2019.06.24},
 }
@@ -16163,7 +16143,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   howpublished = {\url{https://github.com/lehkost/dramenquartett}},
   organization = {{dramenquartett}},
   doi          = {10.6084/m9.figshare.6667424.v1},
-  groups       = {Character Nets},
   owner        = {Vincent},
   timestamp    = {2019.06.24},
 }
@@ -17622,7 +17601,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   pages     = {083030},
   doi       = {10.1088/1367-2630/14/8/083030},
   owner     = {Vincent},
-  review    = {arXiv: http://arxiv.org/abs/1205.3720},
   timestamp = {2012.05.23},
 }
 
@@ -18071,16 +18049,15 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.06.29},
 }
 
-@Article{Ghai2022,
+@InProceedings{Ghai2022,
   author    = {Ghai, B. and Mishra, M. and Mueller, K.},
   title     = {Cascaded Debiasing : Studying the Cumulative Effect of Multiple Fairness-Enhancing Interventions},
-  journal   = {arXiv},
+  booktitle = {31st ACM International Conference on Information \& Knowledge Management},
   year      = {2022},
-  volume    = {cs.LG},
-  pages     = {2202.03734},
+  pages     = {3082–3091},
+  doi       = {10.1145/3511808.3557155},
   owner     = {Vincent},
   timestamp = {2022.06.29},
-  url       = {https://arxiv.org/abs/2202.03734},
 }
 
 @Article{Ghalmane2018a,
@@ -19471,7 +19448,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.6018/ijes/2017/2/257311},
   owner     = {Vincent},
   timestamp = {2022.11.28},
-  url       = {https://doi.org/10.6018/ijes/2017/2/257311},
 }
 
 @Article{Gregory2010,
@@ -20096,7 +20072,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   pages     = {55-64},
   publisher = {Springer},
   doi       = {10.1007/978-3-319-16268-3_6},
-  groups    = {_General (EgoNets)},
   owner     = {Vincent},
   timestamp = {2023.03.18},
 }
@@ -20724,7 +20699,6 @@ arXiv: https://arxiv.org/abs/1709.07604},
   volume    = {5},
   pages     = {16963-16973},
   doi       = {10.1109/ACCESS.2017.2741098},
-  groups    = {Signed Networks CD, Classic Optimization CD},
   owner     = {Vincent},
   timestamp = {2018.12.11},
 }
@@ -21889,13 +21863,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Hipson2021,
   author    = {Hipson, W. E. and Mohammad, S. M.},
   title     = {Emotion Dynamics in Movie Dialogues},
-  journal   = {arXiv},
+  journal   = {PLoS ONE},
   year      = {2021},
-  volume    = {cs.CL},
-  pages     = {2103.01345},
+  volume    = {16},
+  number    = {9},
+  pages     = {e0256153},
+  doi       = {10.1371/journal.pone.0256153},
   owner     = {Vincent},
   timestamp = {2021.03.27},
-  url       = {https://arxiv.org/abs/2103.01345},
 }
 
 @InProceedings{Hirata2016,
@@ -22842,9 +22817,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle     = {Advances in Neural Information Processing Systems},
   year          = {2020},
   __markedentry = {[Vincent:]},
-  groups        = {Datasets},
   owner         = {Vincent},
-  review        = {arXiv: https://arxiv.org/abs/2005.00687},
   timestamp     = {2020.05.09},
   url           = {https://proceedings.neurips.cc/paper/2020/hash/fb60d411a5c5b72b2e7d3527cfc84fd0-Abstract.html},
 }
@@ -26686,11 +26659,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Kocisky2017,
   author    = {Kočiský, T. and Schwarz, J. and Blunsom, P. and Dyer, C. and Hermann, K. M. and Melis, G. and Grefenstette, E.},
   title     = {The {NarrativeQA} reading comprehension challenge},
-  journal   = {arXiv},
-  year      = {2017},
-  volume    = {cs.CL},
-  pages     = {1712.07040},
-  doi       = {10.48550/arXiv.1712.07040},
+  journal   = {Transactions of the Association for Computational Linguistics},
+  year      = {2018},
+  volume    = {6},
+  pages     = {317-328},
+  doi       = {10.1162/tacl_a_00023},
   owner     = {Vincent},
   timestamp = {2022.06.28},
 }
@@ -26739,9 +26712,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2022},
   volume    = {cs.DL},
   pages     = {2204.10766},
-  doi       = {10.48550/arXiv.2204.10766},
   owner     = {Vincent},
   timestamp = {2022.04.29},
+  url       = {https://arxiv.org/abs/2204.10766},
 }
 
 @InProceedings{Kokkinakis2004,
@@ -27870,7 +27843,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   howpublished = {\url{https://networkscience.wordpress.com/2019/06/07/network-of-characters-in-harry-potter/}},
   organization = {{network science}},
   url          = {https://networkscience.wordpress.com/2019/06/07/network-of-characters-in-harry-potter/},
-  groups       = {Character Nets},
   owner        = {Vincent},
   timestamp    = {2019.06.24},
 }
@@ -28287,7 +28259,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {056117},
   doi       = {10.1103/PhysRevE.80.056117},
   owner     = {Vincent},
-  review    = {arXiv link: http://arxiv.org/abs/0908.1062},
   timestamp = {2010.06.03},
 }
 
@@ -29127,7 +29098,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2019},
   pages     = {15},
   doi       = {10.1145/3326467.3326485},
-  groups    = {Character Nets},
   owner     = {Vincent},
   timestamp = {2019.05.23},
 }
@@ -29247,7 +29217,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   series        = {CEUR Workshop Proceedings},
   pages         = {11-16},
   __markedentry = {[Vincent:]},
-  groups        = {Cinema (Arts)},
   owner         = {Vincent},
   timestamp     = {2020.10.25},
   url           = {http://ceur-ws.org/Vol-2653/paper2.pdf},
@@ -32277,8 +32246,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Malik2021a,
   author    = {Malik, M. and Hopp, F. R. and Weber, R.},
   title     = {Representations of Racial Minorities in Popular Movies: A Content-Analytic Synergy of Computer Vision and Network Science},
-  journal   = {MediArXiv},
-  year      = {2021},
+  journal   = {Computational Communication Research},
+  year      = {2022},
+  volume    = {4},
+  number    = {1},
+  pages     = {208-253},
   doi       = {10.33767/osf.io/3s7nd},
   owner     = {Vincent},
   timestamp = {2021.12.21},
@@ -32485,7 +32457,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/cbo9780511755767},
   owner     = {Vincent},
   timestamp = {2019.04.09},
-  url       = {https://dl.acm.org/citation.cfm?id=322494},
 }
 
 @Article{Mantel1967,
@@ -35226,7 +35197,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {e0157436},
   doi       = {10.1371/journal.pone.0157436},
   owner     = {Vincent},
-  review    = {arXiv: http://arxiv.org/abs/1606.00715},
   timestamp = {2016.06.03},
 }
 
@@ -35984,7 +35954,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages         = {121},
   __markedentry = {[Vincent:]},
   doi           = {10.1007/s41109-019-0226-0},
-  groups        = {Cinema (Arts)},
   owner         = {Vincent},
   timestamp     = {2019.10.26},
 }
@@ -36841,7 +36810,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Holt, Rinehart, and Winston},
   year      = {1961},
   author    = {Newcomb, T. M.},
-  groups    = {Datasets},
   owner     = {Vincent},
   timestamp = {2016.01.06},
   url       = {https://books.google.fr/books?id=YO4EAAAAMAAJ},
@@ -37622,13 +37590,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{NitinBhatia2010,
   author    = {Nitin Bhatia, V.},
   title     = {Survey of Nearest Neighbor Techniques},
-  journal   = {arXiv},
+  journal   = {International Journal of Computer Science \& Information Security},
   year      = {2010},
-  volume    = {cs.CV},
-  pages     = {1007.0085},
+  volume    = {8},
+  number    = {2},
+  pages     = {302-305},
   owner     = {Vincent},
   timestamp = {2022.07.07},
-  url       = {https://arxiv.org/abs/1007.0085},
+  url       = {https://sites.google.com/site/ijcsis/all-volumes-issues/vol-8-no-2-may-2010?authuser=0},
 }
 
 @Book{NiUrdail2011,
@@ -38703,7 +38672,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle = {27th International Joint Conference on Artificial Intelligence},
   year      = {2018},
   pages     = {2609-2615},
-  groups    = {Node Embeddings (Embeddings)},
   owner     = {Vincent},
   timestamp = {2020.01.27},
   url       = {https://dl.acm.org/doi/abs/10.5555/3304889.3305023},
@@ -39277,16 +39245,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.managementissues.com/index.php/specials/75-specials/988-secrets-and-danger-interracial-sexuality-in-louis-couperus-s-the-hidden-force-and-dutch-colonialism},
 }
 
-@Article{Paulus2017,
+@InProceedings{Paulus2017,
   author    = {Paulus, Romain and Xiong, Caiming and Socher, Richard},
   title     = {A Deep Reinforced Model for Abstractive Summarization},
-  journal   = {arXiv},
-  year      = {2017},
-  volume    = {cs.CL},
-  pages     = {1705.04304},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2018},
   owner     = {Vincent},
   timestamp = {2020.12.15},
-  url       = {https://arxiv.org/abs/1705.04304},
+  url       = {https://openreview.net/forum?id=HkAClQgA-},
 }
 
 @InProceedings{Pavllo2018,
@@ -39303,13 +39269,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Pavlyshenko2012,
   author    = {Pavlyshenko, B.},
   title     = {The Clustering of Author's Texts of English Fiction in the Vector Space of Semantic Fields},
-  journal   = {arXiv},
+  journal   = {Cybernetics and Information Technologies},
   year      = {2012},
-  volume    = {cs.CL},
-  pages     = {1212.1478},
+  volume    = {14},
+  number    = {3},
+  pages     = {25-36},
+  doi       = {10.2478/cait-2014-0030},
   owner     = {Vincent},
   timestamp = {2019.04.10},
-  url       = {https://arxiv.org/abs/1212.1478},
 }
 
 @Book{Paynter2011,
@@ -40304,7 +40271,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   booktitle = {Working conference on Advanced visual interfaces},
   year      = {2008},
   doi       = {10.1145/1385569.1385636},
-  groups    = {Visualisation},
   owner     = {Vincent},
   timestamp = {2019.06.24},
 }
@@ -40488,7 +40454,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   number    = {9},
   pages     = {1082},
   owner     = {Vincent},
-  review    = {arXiv: http://arxiv.org/abs/0902.3788},
   timestamp = {2010.06.03},
   url       = {http://www.ams.org/notices/200909/rtx090901082p.pdf},
 }
@@ -40648,7 +40613,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   pages     = {1650005},
   doi       = {10.1142/S0219525916500053},
   owner     = {Vincent},
-  review    = {http://arxiv.org/abs/1602.07275},
   timestamp = {2016.03.01},
 }
 
@@ -41156,7 +41120,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   number    = {3},
   pages     = {036106},
   doi       = {10.1103/PhysRevE.76.036106},
-  groups    = {Propagation CD},
   owner     = {Vincent},
   timestamp = {2010.06.03},
 }
@@ -42742,7 +42705,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   chapter   = {3},
   doi       = {10.3726/978-3-653-05820-8_03},
   owner     = {Vincent},
-  review    = {arXiv: https://arxiv.org/abs/1411.4960},
   timestamp = {2021.02.04},
 }
 
@@ -43270,8 +43232,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2015},
   pages     = {4292-4293},
   owner     = {Vincent},
-  review    = {old title: NetworkRepository: A Graph Data Repository with Visual Interactive Analytics
-arXiv: http://arxiv.org/abs/1410.3560},
   timestamp = {2014.10.19},
   url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/viewPaper/9553},
 }
@@ -43285,7 +43245,6 @@ arXiv: http://arxiv.org/abs/1410.3560},
   number    = {3},
   pages     = {438-452},
   doi       = {10.1109/tkde.2018.2878247},
-  groups    = {Inductive (Embeddings)},
   owner     = {Vincent},
   timestamp = {2021.06.24},
 }
@@ -45113,7 +45072,6 @@ arXiv: http://arxiv.org/abs/1410.3560},
   volume    = {1},
   pages     = {25},
   doi       = {10.3828/mlo.v0i0.364},
-  groups    = {Literature},
   owner     = {Vincent},
   timestamp = {2021.05.15},
 }
@@ -45402,7 +45360,6 @@ arXiv: http://arxiv.org/abs/1410.3560},
   title     = {Exploring network structure, dynamics, and function using NetworkX},
   booktitle = {7th Python in Science Conference},
   year      = {2008},
-  groups    = {NetworkX},
   owner     = {Vincent},
   timestamp = {2020.12.14},
   url       = {https://www.osti.gov/biblio/960616},
@@ -46564,13 +46521,13 @@ arXiv: http://arxiv.org/abs/1410.3560},
 @Article{Simkin2020,
   author    = {Simkin, M. V. and Roychowdhury, V. P.},
   title     = {Statistical study of time intervals between murders for serial killers},
-  journal   = {arXiv},
-  year      = {2020},
-  volume    = {physics.soc-ph},
-  pages     = {1811.00664},
+  journal   = {Journal of Criminal Justice},
+  year      = {2021},
+  volume    = {73},
+  pages     = {101751},
+  doi       = {10.1016/j.jcrimjus.2020.101751},
   owner     = {Vincent},
   timestamp = {2020.11.17},
-  url       = {https://arxiv.org/abs/1811.00664},
 }
 
 @Book{Simmel1950,
@@ -46630,16 +46587,15 @@ arXiv: http://arxiv.org/abs/1410.3560},
   timestamp = {2022.06.22},
 }
 
-@Article{Sims2020,
+@InProceedings{Sims2020,
   author    = {Sims, M. and Bamman, D.},
   title     = {Measuring Information Propagation in Literary Social Networks},
-  journal   = {arXiv},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
   year      = {2020},
-  volume    = {cs.CL},
-  pages     = {2004.13980},
+  pages     = {642-652},
+  doi       = {10.18653/v1/2020.emnlp-main.47},
   owner     = {Vincent},
   timestamp = {2020.05.05},
-  url       = {https://arxiv.org/abs/2004.13980},
 }
 
 @Article{Singh2012,
@@ -47315,7 +47271,6 @@ arXiv: http://arxiv.org/abs/1410.3560},
   number    = {2},
   pages     = {107-117},
   doi       = {10.1007/bf02478357},
-  groups    = {_Misc Wo/C},
   owner     = {Vincent},
   timestamp = {2022.02.19},
 }
@@ -49190,7 +49145,6 @@ arXiv: http://arxiv.org/abs/1410.3560},
   volume    = {9},
   pages     = {17557},
   doi       = {10.1038/s41598-019-53708-y},
-  groups    = {Network Comparison},
   owner     = {Vincent},
   timestamp = {2021.01.21},
 }
@@ -55763,9 +55717,9 @@ arXiv: http://arxiv.org/abs/1410.3560},
   year      = {2022},
   volume    = {cs.CV},
   pages     = {2203.13281},
-  doi       = {10.48550/arXiv.2203.13281},
   owner     = {Vincent},
   timestamp = {2022.04.02},
+  url       = {https://arxiv.org/abs/2203.13281},
 }
 
 @InProceedings{Zhang2022at,
@@ -56160,13 +56114,13 @@ arXiv: http://arxiv.org/abs/1410.3560},
 @Article{Zhou2016,
   author    = {Zhou, Bolei and Khosla, Aditya and Lapedriza, Agata and Torralba, Antonio and Oliva, Aude},
   title     = {Places: An Image Database for Deep Scene Understanding},
-  journal   = {arXiv},
-  year      = {2016},
-  volume    = {cs.CV},
-  pages     = {1610.02055},
+  journal   = {Journal of Vision},
+  year      = {2017},
+  volume    = {17},
+  pages     = {296},
+  doi       = {10.1167/17.10.296},
   owner     = {Vincent},
   timestamp = {2020.01.03},
-  url       = {https://arxiv.org/abs/1610.02055},
 }
 
 @Article{Zhou2017,
@@ -56204,7 +56158,6 @@ arXiv: http://arxiv.org/abs/1410.3560},
   pages     = {57-81},
   doi       = {10.1016/j.aiopen.2021.01.001},
   owner     = {Vincent},
-  review    = {arXiv: https://arxiv.org/abs/1812.08434},
   timestamp = {2020.12.01},
 }
 
